--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -20,20 +20,17 @@
 \usepackage{plain}
 \usepackage{setspace}
 \usepackage[paperheight=29.7cm,paperwidth=21cm,outer=1.5cm,inner=2.5cm,top=2cm,bottom=2cm]{geometry} % layout setting
-\usepackage{titlesec} % custom setup title of chanpter
+\usepackage{titlesec} % custom setup title of chapter
 % \usepackage{newtxtext,newtxmath} % times new roman
 
-%%%%%%%%%%%%%%
 % support for accented letters
-%
-%\usepackage[latin1]{inputenc} % Windows;
-\usepackage[utf8x]{inputenc} % Linux (unicode package is required);
-%\usepackage[applemac]{inputenc} % Mac.
+\usepackage[utf8]{inputenc}
 
 \singlespacing
 
-% italian language
-%\usepackage[italian]{babel}
+\usepackage [english]{babel}
+\usepackage [autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
 
 \begin{document}
 
