Add compression basics

--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -81,8 +81,8 @@
     \begingroup
       % no page break between chapters
       % override clear page commands
-      \renewcommand{\cleardoublepage}{}
-      \renewcommand{\clearpage}{}
+      %\renewcommand{\cleardoublepage}{}
+      %\renewcommand{\clearpage}{}
       
       % override format of title chapter
       % from
@@ -119,7 +119,6 @@
       % \input or \include
       %
       \input{chapters/1_introduction}
-      
       \input{chapters/2_background}
       
       
