--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -59,6 +59,14 @@ keywords = {Video delivery, low latency, HTTP/2, video frame discarding, DASH, w
     year =      2022,
     month =     mar,
     day =       7,
-    abstract =  {RUSH is an application-level protocol for ingesting live video. This document describes the protocol and how it maps onto QUIC. Discussion Venues This note is to be removed before publishing as an RFC. Discussion of this document takes place on the mailing list (), which is archived at . Source for this draft and an issue tracker can be found at https://github.com/afrind/draft-rush.},
+}
+
+@book{h264,
+author = {Richardson, Iain E.},
+title = {The H.264 Advanced Video Compression Standard},
+year = {2010},
+isbn = {0470516925},
+publisher = {Wiley Publishing},
+edition = {2nd},
 }
 
