Add codecs/H.264 section

--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -21,7 +21,6 @@
 \usepackage{setspace}
 \usepackage[paperheight=29.7cm,paperwidth=21cm,outer=1.5cm,inner=2.5cm,top=2cm,bottom=2cm]{geometry} % layout setting
 \usepackage{titlesec} % custom setup title of chapter
-% \usepackage{newtxtext,newtxmath} % times new roman
 
 % support for accented letters
 \usepackage[utf8]{inputenc}
@@ -31,6 +30,10 @@
 \usepackage [english]{babel}
 \usepackage [autostyle, english = american]{csquotes}
 \MakeOuterQuote{"}
+
+% Better URL formatting and break on hyphens
+\usepackage[hyphens]{url}
+\usepackage[hidelinks]{hyperref}
 
 \begin{document}
 
