--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -70,3 +70,23 @@ publisher = {Wiley Publishing},
 edition = {2nd},
 }
 
+@misc{bitmovin,
+	title = {{Bitmovin Video Developer Report}},
+	howpublished = {\url{https://go.bitmovin.com/video-developer-report-2021}},
+	year={2021},
+}
+
+@misc{hevcroyalties,
+	title = {{The Future of HEVC Licensing Is Bleak, Declares MPEG Chairman}},
+	howpublished = {\url{https://www.streamingmedia.com/Articles/Editorial/Featured-Articles/The-Future-of-HEVC-Licensing-Is-Bleak-Declares-MPEG-Chairman-122983.aspx}},
+	year={2021},
+	month={January},
+	day={31},
+	author={Jan Ozer},
+}
+
+@misc{msu2021,
+	title = {{MSU Video Codecs Comparison 2021}},
+	howpublished = {\url{https://compression.ru/video/codec_comparison/2021/main_report.html}},
+	year={2021},
+}
