Add audio compression

--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -90,3 +90,8 @@ edition = {2nd},
 	howpublished = {\url{https://compression.ru/video/codec_comparison/2021/main_report.html}},
 	year={2021},
 }
+
+@misc{aacpriming,
+    title={{Audio Priming - Handling Encoder Delay in AAC}},
+    howpublished={\url{https://developer.apple.com/library/archive/documentation/QuickTime/QTFF/QTFFAppenG/QTFFAppenG.html}},
+}
