--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -1,84 +1,93 @@
 @article{cisco2019,
-  title={Cisco visual networking index: Forecast and trends, 2017--2022 white paper},
-  author={Cisco, VNI},
-  journal={Cisco Internet Rep},
-  volume={17},
-  pages={13},
-  year={2019}
+    title={Cisco visual networking index: Forecast and trends, 2017--2022 white paper},
+    author={Cisco, VNI},
+    journal={Cisco Internet Rep},
+    volume={17},
+    pages={13},
+    year={2019},
 }
 
-@ARTICLE{bola,  author={Spiteri, Kevin and Urgaonkar, Rahul and Sitaraman, Ramesh K.},  journal={IEEE/ACM Transactions on Networking},   title={BOLA: Near-Optimal Bitrate Adaptation for Online Videos},   year={2020},  volume={28},  number={4},  pages={1698-1711},  doi={10.1109/TNET.2020.2996964}}
+@ARTICLE{bola,
+    author={Spiteri, Kevin and Urgaonkar, Rahul and Sitaraman, Ramesh K.},
+    journal={IEEE/ACM Transactions on Networking},
+    title={BOLA: Near-Optimal Bitrate Adaptation for Online Videos},
+    year={2020},
+    volume={28},
+    number={4},
+    pages={1698-1711},
+    doi={10.1109/TNET.2020.2996964},
+}
 
 @inproceedings{neural,
-author = {Mao, Hongzi and Netravali, Ravi and Alizadeh, Mohammad},
-title = {Neural Adaptive Video Streaming with Pensieve},
-year = {2017},
-isbn = {9781450346535},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3098822.3098843},
-doi = {10.1145/3098822.3098843},
-booktitle = {Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
-pages = {197–210},
-numpages = {14},
-keywords = {reinforcement learning, bitrate adaptation, video streaming},
-location = {Los Angeles, CA, USA},
-series = {SIGCOMM '17}
+    author={Mao, Hongzi and Netravali, Ravi and Alizadeh, Mohammad},
+    title={Neural Adaptive Video Streaming with Pensieve},
+    year={2017},
+    isbn={9781450346535},
+    publisher={Association for Computing Machinery},
+    address={New York, NY, USA},
+    url={https://doi.org/10.1145/3098822.3098843},
+    doi={10.1145/3098822.3098843},
+    booktitle={Proceedings of the Conference of the ACM Special Interest Group on Data Communication},
+    pages={197–210},
+    numpages={14},
+    keywords={reinforcement learning, bitrate adaptation, video streaming},
+    location={Los Angeles, CA, USA},
+    series={SIGCOMM '17},
 }
 
 @article{framediscarding,
-author = {Yahia, Mariem Ben and Louedec, Yannick Le and Simon, Gwendal and Nuaymi, Loutfi and Corbillon, Xavier},
-title = {HTTP/2-Based Frame Discarding for Low-Latency Adaptive Video Streaming},
-year = {2019},
-issue_date = {February 2019},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {15},
-number = {1},
-issn = {1551-6857},
-url = {https://doi.org/10.1145/3280854},
-doi = {10.1145/3280854},
-journal = {ACM Trans. Multimedia Comput. Commun. Appl.},
-month = {feb},
-articleno = {18},
-numpages = {23},
-keywords = {Video delivery, low latency, HTTP/2, video frame discarding, DASH, wireless networks}
+    author={Yahia, Mariem Ben and Louedec, Yannick Le and Simon, Gwendal and Nuaymi, Loutfi and Corbillon, Xavier},
+    title={HTTP/2-Based Frame Discarding for Low-Latency Adaptive Video Streaming},
+    year={2019},
+    issue_date={February 2019},
+    publisher={Association for Computing Machinery},
+    address={New York, NY, USA},
+    volume={15},
+    number={1},
+    issn={1551-6857},
+    url={https://doi.org/10.1145/3280854},
+    doi={10.1145/3280854},
+    journal={ACM Trans. Multimedia Comput. Commun. Appl.},
+    month={feb},
+    articleno={18},
+    numpages={23},
+    keywords={Video delivery, low latency, HTTP/2, video frame discarding, DASH, wireless networks},
 }
 
 
 @techreport{rush,
-    number =    {draft-kpugin-rush-01},
-    type =      {Internet-Draft},
-    institution =   {Internet Engineering Task Force},
-    publisher = {Internet Engineering Task Force},
-    note =      {Work in Progress},
-    url =       {https://datatracker.ietf.org/doc/draft-kpugin-rush/01/},
-        author =    {Kirill Pugin and Alan Frindell and Jordi Cenzano and Jake Weissman},
-    title =     {{RUSH - Reliable (unreliable) streaming protocol}},
-    pagetotal = 16,
-    year =      2022,
-    month =     mar,
-    day =       7,
+    number={draft-kpugin-rush-01},
+    type={Internet-Draft},
+    institution={Internet Engineering Task Force},
+    publisher={Internet Engineering Task Force},
+    note={Work in Progress},
+    url={https://datatracker.ietf.org/doc/draft-kpugin-rush/01/},
+    author={Kirill Pugin and Alan Frindell and Jordi Cenzano and Jake Weissman},
+    title={{RUSH - Reliable (unreliable) streaming protocol}},
+    pagetotal=16,
+    year=2022,
+    month=mar,
+    day=7,
 }
 
 @book{h264,
-author = {Richardson, Iain E.},
-title = {The H.264 Advanced Video Compression Standard},
-year = {2010},
-isbn = {0470516925},
-publisher = {Wiley Publishing},
-edition = {2nd},
+    author={Richardson, Iain E.},
+    title={The H.264 Advanced Video Compression Standard},
+    year={2010},
+    isbn={0470516925},
+    publisher={Wiley Publishing},
+    edition={2nd},
 }
 
 @misc{bitmovin,
-	title = {{Bitmovin Video Developer Report}},
-	howpublished = {\url{https://go.bitmovin.com/video-developer-report-2021}},
+	title={{Bitmovin Video Developer Report}},
+	howpublished={\url{https://go.bitmovin.com/video-developer-report-2021}},
 	year={2021},
 }
 
 @misc{hevcroyalties,
-	title = {{The Future of HEVC Licensing Is Bleak, Declares MPEG Chairman}},
-	howpublished = {\url{https://www.streamingmedia.com/Articles/Editorial/Featured-Articles/The-Future-of-HEVC-Licensing-Is-Bleak-Declares-MPEG-Chairman-122983.aspx}},
+	title={{The Future of HEVC Licensing Is Bleak, Declares MPEG Chairman}},
+	howpublished={\url{https://www.streamingmedia.com/Articles/Editorial/Featured-Articles/The-Future-of-HEVC-Licensing-Is-Bleak-Declares-MPEG-Chairman-122983.aspx}},
 	year={2021},
 	month={January},
 	day={31},
@@ -86,8 +95,8 @@ edition = {2nd},
 }
 
 @misc{msu2021,
-	title = {{MSU Video Codecs Comparison 2021}},
-	howpublished = {\url{https://compression.ru/video/codec_comparison/2021/main_report.html}},
+	title={{MSU Video Codecs Comparison 2021}},
+	howpublished={\url{https://compression.ru/video/codec_comparison/2021/main_report.html}},
 	year={2021},
 }
 
