--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -7,10 +7,10 @@
     year={2019},
 }
 
-@ARTICLE{bola,
+@article{bola,
     author={Spiteri, Kevin and Urgaonkar, Rahul and Sitaraman, Ramesh K.},
     journal={IEEE/ACM Transactions on Networking},
-    title={BOLA: Near-Optimal Bitrate Adaptation for Online Videos},
+    title={{BOLA: Near-Optimal Bitrate Adaptation for Online Videos}},
     year={2020},
     volume={28},
     number={4},
@@ -20,7 +20,7 @@
 
 @inproceedings{neural,
     author={Mao, Hongzi and Netravali, Ravi and Alizadeh, Mohammad},
-    title={Neural Adaptive Video Streaming with Pensieve},
+    title={{Neural Adaptive Video Streaming with Pensieve}},
     year={2017},
     isbn={9781450346535},
     publisher={Association for Computing Machinery},
@@ -37,7 +37,7 @@
 
 @article{framediscarding,
     author={Yahia, Mariem Ben and Louedec, Yannick Le and Simon, Gwendal and Nuaymi, Loutfi and Corbillon, Xavier},
-    title={HTTP/2-Based Frame Discarding for Low-Latency Adaptive Video Streaming},
+    title={{HTTP/2-Based Frame Discarding for Low-Latency Adaptive Video Streaming}},
     year={2019},
     issue_date={February 2019},
     publisher={Association for Computing Machinery},
@@ -103,4 +103,32 @@
 @misc{aacpriming,
     title={{Audio Priming - Handling Encoder Delay in AAC}},
     howpublished={\url{https://developer.apple.com/library/archive/documentation/QuickTime/QTFF/QTFFAppenG/QTFFAppenG.html}},
+}
+
+@article{aac,
+    author={Karlheinz Brandenburg},
+    year={2001},
+    month={03},
+    title={{MP3 and AAC explained}},
+}
+
+@misc{h264itu,
+    title={{H.264: Advanced video coding for generic audiovisual services}},
+    howpublished={\url{https://www.itu.int/rec/T-REC-H.264}},
+}
+
+@misc{mpeg2ts,
+    title={{MPEG-2 Part 1: Systems}},
+    howpublished={\url{https://www.iso.org/standard/83239.html}},
+    year={2022},
+    month={September},
+    note={8th edition},
+}
+
+@misc{mpeg4part12,
+    title={{MPEG-4 Part 12: ISO base media file format}},
+    howpublished={\url{https://www.iso.org/standard/83102.html}},
+    year={2021},
+    month={January},
+    note={7th edition}
 }
