Add architecture, HLS, CMAF, MSE

--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -132,3 +132,44 @@
     month={January},
     note={7th edition}
 }
+
+@book{ozer,
+	author={Ozer Jan},
+	title={Video Encoding by the Numbers. Eliminate the Guesswork from your Streaming Video},
+	publisher={Doceo Publishing},
+	year={2016},
+	month={December},
+}
+
+@misc{rfc8216,
+	series={Request for Comments},
+	number=8216,
+	howpublished={RFC 8216},
+	publisher={RFC Editor},
+	doi={10.17487/RFC8216},
+	url={https://www.rfc-editor.org/info/rfc8216},
+	author={Roger Pantos and William May},
+	title={{HTTP Live Streaming}},
+	pagetotal=60,
+	year=2017,
+	month=aug,
+}
+
+@misc{cmaf,
+    title={{What is CMAF?}},
+    publisher={Wowza},
+    author={Sydney Whalen},
+    year={2022},
+    month={August},
+    day={4},
+    howpublished={\url{https://www.wowza.com/blog/what-is-cmaf}}
+}
+
+@misc{mse,
+    title={{Media Source Extensions™}},
+    howpublished={{https://www.w3.org/TR/media-source/}},
+    year={2022},
+    month={September},
+    day={21},
+    note={W3C Working Draft},
+}
