--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -173,3 +173,95 @@
     day={21},
     note={W3C Working Draft},
 }
+
+@misc{http1.1,
+	series={Request for Comments},
+	number=2068,
+	howpublished={RFC 2068},
+	publisher={RFC Editor},
+	doi={10.17487/RFC2068},
+	url={https://www.rfc-editor.org/info/rfc2068},
+	author={Roy T. Fielding and Henrik Nielsen and Jeffrey Mogul and Jim Gettys and Tim Berners-Lee},
+	title={{Hypertext Transfer Protocol -- HTTP/1.1}},
+	pagetotal=162,
+	year=1997,
+	month=jan,
+	abstract={The Hypertext Transfer Protocol (HTTP) is an application-level protocol for distributed, collaborative, hypermedia information systems. {[}STANDARDS-TRACK{]}},
+}
+
+@misc{http2,
+	series={Request for Comments},
+	number=7540,
+	howpublished={RFC 7540},
+	publisher={RFC Editor},
+	doi={10.17487/RFC7540},
+	url={https://www.rfc-editor.org/info/rfc7540},
+	author={Mike Belshe and Roberto Peon and Martin Thomson},
+	title={{Hypertext Transfer Protocol Version 2 (HTTP/2)}},
+	pagetotal=96,
+	year=2015,
+	month=may,
+	abstract={This specification describes an optimized expression of the semantics of the Hypertext Transfer Protocol (HTTP), referred to as HTTP version 2 (HTTP/2). HTTP/2 enables a more efficient use of network resources and a reduced perception of latency by introducing header field compression and allowing multiple concurrent exchanges on the same connection. It also introduces unsolicited push of representations from servers to clients. This specification is an alternative to, but does not obsolete, the HTTP/1.1 message syntax. HTTP's existing semantics remain unchanged.},
+}
+
+@inproceedings{http2pri,
+	author={Wijnants, Maarten and Marx, Robin and Quax, Peter and Lamotte, Wim},
+	title={HTTP/2 Prioritization and Its Impact on Web Performance},
+	year={2018},
+	isbn={9781450356398},
+	publisher={International World Wide Web Conferences Steering Committee},
+	address={Republic and Canton of Geneva, CHE},
+	url={https://doi.org/10.1145/3178876.3186181},
+	doi={10.1145/3178876.3186181},
+	booktitle={Proceedings of the 2018 World Wide Web Conference},
+	pages={1755–1764},
+	numpages={10},
+	keywords={experimental evaluation, prioritization, http/2, resource loading, page load time (plt), web performance optimization (wpo)},
+	location={Lyon, France},
+	series={WWW '18}
+}
+
+@misc{http3,
+	series={Request for Comments},
+	number=9114,
+	howpublished={RFC 9114},
+	publisher={RFC Editor},
+	doi={10.17487/RFC9114},
+	url={https://www.rfc-editor.org/info/rfc9114},
+		author={Mike Bishop},
+	title={{HTTP/3}},
+	pagetotal=57,
+	year=2022,
+	month=jun,
+}
+
+@inproceedings{quicdiversity,
+	author={Marx, Robin and Herbots, Joris and Lamotte, Wim and Quax, Peter},
+	title={Same Standards, Different Decisions: A Study of QUIC and HTTP/3 Implementation Diversity},
+	year={2020},
+	isbn={9781450380478},
+	publisher={Association for Computing Machinery},
+	address={New York, NY, USA},
+	url={https://doi.org/10.1145/3405796.3405828},
+	doi={10.1145/3405796.3405828},
+	booktitle={Proceedings of the Workshop on the Evolution, Performance, and Interoperability of QUIC},
+	pages={14–20},
+	numpages={7},
+	keywords={HTTP/3, Multiplexing, QUIC, 0-RTT, Transport Protocol},
+	location={Virtual Event, USA},
+	series={EPIQ '20}
+}
+
+@misc{rfc9218,
+	series={Request for Comments},
+	number=9218,
+	howpublished={RFC 9218},
+	publisher={RFC Editor},
+	doi={10.17487/RFC9218},
+	url={https://www.rfc-editor.org/info/rfc9218},
+	author={Kazuho Oku and Lucas Pardue},
+	title={{Extensible Prioritization Scheme for HTTP}},
+	pagetotal=21,
+	year=2022,
+	month=jun,
+}
