Add network emulation tools

--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -265,3 +265,14 @@
 	year=2022,
 	month=jun,
 }
+
+@ARTICLE{comnetsemu,
+    author={Xiang, Zuo and Pandi, Sreekrishna and Cabrera, Juan and Granelli, Fabrizio and Seeling, Patrick and Fitzek, Frank H. P.},
+    journal={IEEE Communications Magazine},
+    title={An Open Source Testbed for Virtualized Communication Networks},
+    year={2021},
+    volume={59},
+    number={2},
+    pages={77-83},
+    doi={10.1109/MCOM.001.2000578}
+}
