Partial testbed setup

--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -276,3 +276,38 @@
     pages={77-83},
     doi={10.1109/MCOM.001.2000578}
 }
+
+@misc{hlsauthoring,
+    title={{HTTP Live Streaming (HLS) Authoring Specification for Apple Devices}},
+    publisher={Apple},
+    howpublished={\url{https://developer.apple.com/documentation/http_live_streaming/http_live_streaming_hls_authoring_specification_for_apple_devices}}
+}
+
+@inproceedings{av1,
+	doi={10.1117/12.2632905},
+	url={https://doi.org/10.1117/12.2632905},
+	year={2022},
+	month=oct,
+	publisher={{SPIE}},
+	author={Ryan Lei and Jun Sik Song and Adrian Grange and Jingning Han and John Simmons and Andrey Norkin},
+	editor={Andrew G. Tescher and Touradj Ebrahimi},
+	title={{AV}1 benchmarking test for 3GPP},
+	booktitle={Applications of Digital Image Processing {XLV}}
+}
+
+@inproceedings{dataset1,
+	author={Raca, Darijo and Quinlan, Jason J. and Zahran, Ahmed H. and Sreenan, Cormac J.},
+	title={Beyond Throughput: A 4G LTE Dataset with Channel and Context Metrics},
+	year={2018},
+	isbn={9781450351928},
+	publisher={Association for Computing Machinery},
+	address={New York, NY, USA},
+	url={https://doi.org/10.1145/3204949.3208123},
+	doi={10.1145/3204949.3208123},
+	booktitle={Proceedings of the 9th ACM Multimedia Systems Conference},
+	pages={460–465},
+	numpages={6},
+	keywords={ns-3, context information, throughput, 4G, dataset, mobility, LTE, adaptive video streaming},
+	location={Amsterdam, Netherlands},
+	series={MMSys '18}
+}
