--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -27,11 +27,6 @@
 
 \singlespacing
 
-% Fix quotes
-\usepackage [english]{babel}
-\usepackage [autostyle, english = american]{csquotes}
-\MakeOuterQuote{"}
-
 % Better URL formatting and break on hyphens
 \usepackage[hyphens]{url}
 \usepackage[hidelinks]{hyperref}
@@ -41,6 +36,13 @@
 
 % Code blocks
 \usepackage{minted}
+
+% Fix quotes. Should be kept last or it complains
+\usepackage [english]{babel}
+\usepackage [autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
+
+\newcommand{\ffmpeg}{\texttt{ffmpeg}}
 
 \begin{document}
 
@@ -130,7 +132,7 @@
       %
       \input{chapters/1_introduction}
       \input{chapters/2_background}
-      
+      \input{chapters/3_evaluation}
       
     \endgroup
 
