Finished evaluation chapter

--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -38,6 +38,10 @@
 % Code blocks
 \usepackage{minted}
 
+% Subfigures
+\usepackage{caption}
+\usepackage{subcaption}
+
 % Fix quotes. Should be kept last or it complains
 \usepackage [english]{babel}
 \usepackage [autostyle, english = american]{csquotes}
