--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -155,6 +155,35 @@
 	month=aug,
 }
 
+@misc{dash,
+    title={{Dynamic adaptive streaming over HTTP (DASH) — Part 1: Media presentation description and segment formats}},
+    howpublished={\url{https://www.iso.org/standard/83314.html}},
+    year={2022},
+    month={August},
+    note={5th edition}
+}
+
+@misc{dash2,
+    title={{MPEG-DASH: Dynamic Adaptive Streaming Over HTTP Explained}},
+    publisher={Wowza},
+    author={Traci Ruether},
+    year={2022},
+    month={April},
+    day={18},
+    howpublished={\url{https://www.wowza.com/blog/mpeg-dash-dynamic-adaptive-streaming-over-http}}
+}
+
+@INPROCEEDINGS{llhls_vs_lldash,
+	author={Durak, Kerem and Akcay, Mehmet N. and Erinc, Yigit K. and Pekel, Boran and Begen, Ali C.},
+	booktitle={2020 IEEE 22nd International Workshop on Multimedia Signal Processing (MMSP)}, 
+	title={Evaluating the Performance of Apple’s Low-Latency HLS}, 
+	year={2020},
+	volume={},
+	number={},
+	pages={1-6},
+	doi={10.1109/MMSP48831.2020.9287117}
+}
+
 @misc{cmaf,
     title={{What is CMAF?}},
     publisher={Wowza},
