Add partial improvements chapter

--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -81,6 +81,7 @@
       \input{chapters/2_background}
       \input{chapters/3_testbed}
       \input{chapters/4_evaluation}
+      \input{chapters/5_improvements}
 
     \endgroup
 
