--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -340,3 +340,20 @@
 	location={Amsterdam, Netherlands},
 	series={MMSys '18}
 }
+
+@inproceedings{dashjs_dynamic,
+    author={Spiteri, Kevin and Sitaraman, Ramesh and Sparacio, Daniel},
+    title={From Theory to Practice: Improving Bitrate Adaptation in the DASH Reference Player},
+    year={2018},
+    isbn={9781450351928},
+    publisher={Association for Computing Machinery},
+    address={New York, NY, USA},
+    url={https://doi.org/10.1145/3204949.3204953},
+    doi={10.1145/3204949.3204953},
+    booktitle={Proceedings of the 9th ACM Multimedia Systems Conference},
+    pages={123–137},
+    numpages={15},
+    keywords={video QoE, video streaming, bitrate adaptation},
+    location={Amsterdam, Netherlands},
+    series={MMSys '18}
+}
