--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -357,3 +357,26 @@
     location={Amsterdam, Netherlands},
     series={MMSys '18}
 }
+
+@TechReport{webcodecs,
+    author="Paul Adenot and Bernard Aboba",
+    title="WebCodecs",
+    month=nov,
+    note="https://www.w3.org/TR/2022/WD-webcodecs-20221122/",
+    year="2022",
+    bibsource="https://w2.syronex.com/jmr/w3c-biblio",
+    type="{W3C} Working Draft",
+    institution="W3C",
+}
+
+@TechReport{webcodecs_registry,
+    author="Chris Cunningham and Bernard Aboba and Paul Adenot",
+    title="WebCodecs Codec Registry",
+    month=oct,
+    note="https://www.w3.org/TR/2022/DRY-webcodecs-codec-registry-20221013/",
+    year="2022",
+    bibsource="https://w2.syronex.com/jmr/w3c-biblio",
+    type="",
+    institution="W3C",
+}
+
