--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -73,8 +73,6 @@
       \input{chapters/0_abstract}
 
 
-% The first chapter of the final thesis must contain a summary of a maximum length of 3 pages, introducing the context and motivations, resuming the problem faced by the student, the techniques used for the investigation and the reached outcomes.
-
       % chapters
       %\input{chapters/1_introduction}
       \chapter{Introduction}
@@ -82,6 +80,7 @@
       \input{chapters/3_testbed}
       \input{chapters/4_evaluation}
       \input{chapters/5_improvements}
+      \input{chapters/6_conclusions}
 
     \endgroup
 
