--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -72,10 +72,8 @@
       % summary / abstract
       \input{chapters/0_abstract}
 
-
       % chapters
-      %\input{chapters/1_introduction}
-      \chapter{Introduction}
+      \input{chapters/1_introduction}
       \input{chapters/2_background}
       \input{chapters/3_testbed}
       \input{chapters/4_evaluation}
