Add missing diagrams

--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -116,11 +116,9 @@
 }
 
 @misc{mpeg2ts,
-    title={{MPEG-2 Part 1: Systems}},
-    howpublished={\url{https://www.iso.org/standard/83239.html}},
-    year={2022},
-    month={September},
-    note={8th edition},
+    title={{An introduction to MPEG-TS}},
+    howpublished={\url{https://tsduck.io/download/docs/mpegts-introduction.pdf}},
+    author={Thierry Lelegard}
 }
 
 @misc{mpeg4part12,
