--- a/contrini_matteo_computerscience.tex
+++ b/contrini_matteo_computerscience.tex
@@ -35,6 +35,8 @@
 \MakeOuterQuote{"}
 
 \newcommand{\ffmpeg}{\texttt{ffmpeg}}
+\newcommand{\dashjs}{\texttt{dash.js}}
+\newcommand{\hlsjs}{\texttt{HLS.js}}
 
 \begin{document}
 
