--- a/parts/acknowledgements.tex
+++ b/parts/acknowledgements.tex
@@ -1,12 +1,12 @@
 \thispagestyle{empty}
 
 \begin{center}
-  {\bf \Huge Acknowledgements}
+  {\bf \Huge Ringraziamenti}
 \end{center}
 
 \vspace{4cm}
 
 
 \emph{
-  ...thanks to...
+Ringrazio il prof. Granelli per avermi dato l'opportunità di svolgere questo lavoro, nonché tutte le persone che mi hanno accompagnato in questo lungo percorso universitario. Un ringraziamento speciale va a Giovanni, Verdiana, Alberto, Francesco, Emilio, Alessandro, Luca per l'a volte inconsapevole supporto datomi nell'ultimo anno. Infine, ringrazio i miei genitori per il continuo sostegno in questi anni.
 }
