--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -1,5 +1,5 @@
 @article{cisco2019,
-    title={Cisco visual networking index: Forecast and trends, 2017--2022 white paper},
+    title={{Cisco visual networking index: Forecast and trends, 2017--2022 white paper}},
     author={Cisco, VNI},
     journal={Cisco Internet Rep},
     volume={17},
@@ -70,7 +70,7 @@
 
 @book{h264,
     author={Richardson, Iain E.},
-    title={The H.264 Advanced Video Compression Standard},
+    title={{The H.264 Advanced Video Compression Standard}},
     year={2010},
     isbn={0470516925},
     publisher={Wiley Publishing},
@@ -106,7 +106,7 @@
 @article{aac,
     author={Karlheinz Brandenburg},
     year={2001},
-    month={03},
+    month={March},
     title={{MP3 and AAC explained}},
 }
 
@@ -131,7 +131,7 @@
 
 @book{ozer,
 	author={Ozer Jan},
-	title={Video Encoding by the Numbers. Eliminate the Guesswork from your Streaming Video},
+	title={{Video Encoding by the Numbers. Eliminate the Guesswork from your Streaming Video}},
 	publisher={Doceo Publishing},
 	year={2016},
 	month={December},
@@ -172,7 +172,7 @@
 @INPROCEEDINGS{llhls_vs_lldash,
     author={Durak, Kerem and Akcay, Mehmet N. and Erinc, Yigit K. and Pekel, Boran and Begen, Ali C.},
     booktitle={2020 IEEE 22nd International Workshop on Multimedia Signal Processing (MMSP)}, 
-    title={Evaluating the Performance of Apple’s Low-Latency HLS}, 
+    title={{Evaluating the Performance of Apple’s Low-Latency HLS}}, 
     year={2020},
     volume={},
     number={},
@@ -226,12 +226,11 @@
 	pagetotal=96,
 	year=2015,
 	month=may,
-	abstract={This specification describes an optimized expression of the semantics of the Hypertext Transfer Protocol (HTTP), referred to as HTTP version 2 (HTTP/2). HTTP/2 enables a more efficient use of network resources and a reduced perception of latency by introducing header field compression and allowing multiple concurrent exchanges on the same connection. It also introduces unsolicited push of representations from servers to clients. This specification is an alternative to, but does not obsolete, the HTTP/1.1 message syntax. HTTP's existing semantics remain unchanged.},
 }
 
 @inproceedings{http2pri,
 	author={Wijnants, Maarten and Marx, Robin and Quax, Peter and Lamotte, Wim},
-	title={HTTP/2 Prioritization and Its Impact on Web Performance},
+	title={{HTTP/2 Prioritization and Its Impact on Web Performance}},
 	year={2018},
 	isbn={9781450356398},
 	publisher={International World Wide Web Conferences Steering Committee},
@@ -253,7 +252,7 @@
 	publisher={RFC Editor},
 	doi={10.17487/RFC9114},
 	url={https://www.rfc-editor.org/info/rfc9114},
-		author={Mike Bishop},
+	author={Mike Bishop},
 	title={{HTTP/3}},
 	pagetotal=57,
 	year=2022,
@@ -262,7 +261,7 @@
 
 @inproceedings{quicdiversity,
 	author={Marx, Robin and Herbots, Joris and Lamotte, Wim and Quax, Peter},
-	title={Same Standards, Different Decisions: A Study of QUIC and HTTP/3 Implementation Diversity},
+	title={{Same Standards, Different Decisions: A Study of QUIC and HTTP/3 Implementation Diversity}},
 	year={2020},
 	isbn={9781450380478},
 	publisher={Association for Computing Machinery},
@@ -294,7 +293,7 @@
 @ARTICLE{comnetsemu,
     author={Xiang, Zuo and Pandi, Sreekrishna and Cabrera, Juan and Granelli, Fabrizio and Seeling, Patrick and Fitzek, Frank H. P.},
     journal={IEEE Communications Magazine},
-    title={An Open Source Testbed for Virtualized Communication Networks},
+    title={{An Open Source Testbed for Virtualized Communication Networks}},
     year={2021},
     volume={59},
     number={2},
@@ -316,13 +315,13 @@
 	publisher={{SPIE}},
 	author={Ryan Lei and Jun Sik Song and Adrian Grange and Jingning Han and John Simmons and Andrey Norkin},
 	editor={Andrew G. Tescher and Touradj Ebrahimi},
-	title={{AV}1 benchmarking test for 3GPP},
+	title={{AV1 benchmarking test for 3GPP}},
 	booktitle={Applications of Digital Image Processing {XLV}}
 }
 
 @inproceedings{dataset1,
 	author={Raca, Darijo and Quinlan, Jason J. and Zahran, Ahmed H. and Sreenan, Cormac J.},
-	title={Beyond Throughput: A 4G LTE Dataset with Channel and Context Metrics},
+	title={{Beyond Throughput: A 4G LTE Dataset with Channel and Context Metrics}},
 	year={2018},
 	isbn={9781450351928},
 	publisher={Association for Computing Machinery},
@@ -339,7 +338,7 @@
 
 @inproceedings{dashjs_dynamic,
     author={Spiteri, Kevin and Sitaraman, Ramesh and Sparacio, Daniel},
-    title={From Theory to Practice: Improving Bitrate Adaptation in the DASH Reference Player},
+    title={{From Theory to Practice: Improving Bitrate Adaptation in the DASH Reference Player}},
     year={2018},
     isbn={9781450351928},
     publisher={Association for Computing Machinery},
